feat: complete typed event schema accessors